<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="buttonClearMemory">MC</string>
    <string name="buttonAddToMemory">M+</string>
    <string name="buttonSubtractFromMemory">M-</string>
    <string name="buttonRecallMemory">MR</string>
    <string name="buttonClear">C</string>
    <string name="buttonClearE">CE</string>
    <string name="buttonRightArrow">→</string>

    <!--Arithmetic Buttons-->


    <string name="buttonRightPar">)</string>
    <string name="buttonLeftPar">(</string>

    <string name="buttonToggleSign">±</string>
    <string name="buttonDiv">÷</string>
    <string name="buttonMultiply">×</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonAdd">+</string>
    <string name="buttonPercent">%</string>
    <string name="buttonEquals">=</string>
    <string name="buttonDecimal">.</string>
    <string name="buttonSquareRoot">√x</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonln">ln</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>

    <!--Numeric Buttons-->

    <string name="buttonZero">0</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>

    <!--outputTextView-->

    <string name="outputTextView">0</string>

    <string name="error">Error</string>

</resources>