<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/backgroundLinearLayout"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:background="@color/backgroundLinearLayout">

        <TextView
            android:id="@+id/outputView"
            style="@style/FontTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:maxLines="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:background="@color/backgroundLinearLayout">

        <Button
            android:id="@+id/buttonClear"
            style="@style/CButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonClear" />

        <Button
            android:id="@+id/buttonRightArrow"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonRightArrow" />

        <Button
            android:id="@+id/buttonDiv"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonDiv" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonMultiply" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:background="@color/backgroundLinearLayout">

        <Button
            android:id="@+id/buttonSeven"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonSeven" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonEight" />

        <Button
            android:id="@+id/buttonNine"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonNine" />

        <Button
            android:id="@+id/buttonSubtract"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonSubtract" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:background="@color/backgroundLinearLayout">

        <Button
            android:id="@+id/buttonFour"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonFour" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonFive" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonSix" />

        <Button
            android:id="@+id/buttonAdd"
            style="@style/NormalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonAdd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".24"
        android:background="@color/backgroundLinearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/column1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:background="@color/PressedButtonColor"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/column2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50"
                android:background="@color/backgroundLinearLayout">

                <Button
                    android:id="@+id/buttonOne"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:onClick="onButtonClick"
                    android:text="@string/buttonOne" />

                <Button
                    android:id="@+id/buttonTwo"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:onClick="onButtonClick"
                    android:text="@string/buttonTwo" />

                <Button
                    android:id="@+id/buttonThree"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:onClick="onButtonClick"
                    android:text="@string/buttonThree" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/column3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50"
                android:background="@color/backgroundLinearLayout">

                <Button
                    android:id="@+id/buttonZero"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:onClick="onButtonClick"
                    android:text="@string/buttonZero" />

                <Button
                    android:id="@+id/buttonDecimal"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:onClick="onButtonClick"
                    android:text="@string/buttonDecimal" />

                <Button
                    android:id="@+id/buttonPercent"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:onClick="onButtonClick"
                    android:text="@string/buttonPercent" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonEquals"
            style="@style/EquationButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:onClick="onButtonClick"
            android:text="@string/buttonEquals"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>